# Mercurium

./: .gitignore  Cargo.toml  Justfile  LICENSE  json.json  readme.md  runcc-windows.yaml  runcc.yaml
0_deps/: Cargo.toml
0_deps/.cargo/: config.toml
0_deps/src/: lib.rs
1_types/: Cargo.toml
1_types/src/: account.rs  account_summary.rs  account_update.rs  accounts_and_resources.rs  action.rs  address.rs  address_validator.rs  app_error.rs  app_path.rs  app_settings.rs  assets.rs  consts.rs  decimal.rs  entity_account.rs  fungibles.rs  hashed_password.rs  icon.rs  lib.rs  metadata.rs  network.rs  non_fungibles.rs  notification.rs  radix_request_client.rs  resource.rs  task_response.rs  theme.rs  transaction.rs  unsafe_reference.rs  unwrap_unreachable.rs
1_types/src/address/: account_address.rs  address_validator.rs  component_address.rs  mod.rs  resource_address.rs  transaction_address.rs
1_types/src/assets/: asset_id.rs  fungible_asset.rs  mod.rs  non_fungible_asset.rs
1_types/src/collections/: account_update.rs  app_data_from_disk.rs  mod.rs  new_assets.rs
1_types/src/crypto/: bip32_entity.rs  bip32_key_kind.rs  derivation_path_indexes.rs  ed25519.rs  encrypted_mnemonic.rs  encryption_error.rs  key.rs  key_and_salt.rs  key_salt_pair.rs  mod.rs  password.rs  public_key.rs  salt.rs  seedphrase.rs
1_types/src/entity_account/: account_name.rs  settings.rs
1_types/src/response_models/: accounts_details.rs  component_fungible_vaults.rs  entity_details.rs  fungible_collection.rs  ledger_state.rs  metadata.rs  mod.rs  non_fungible_collection.rs  non_fungible_id_data.rs  resource.rs  transactions.rs
1_types/src/services/: mod.rs  repository.rs
2_store/: Cargo.toml  mock.db
2_store/src/: app_data_db.rs  client.rs  connection.rs  create.rs  database.rs  db.rs  icon_cache.rs  icons_db.rs  lib.rs  read.rs  sqlite_key.rs  statements.rs  sync_app_data_db.rs  update.rs
2_store/src/app_data_db/: create.rs  read.rs  update.rs
2_store/src/icons_db/: create.rs  read.rs  update.rs
2_store/src/sync_app_data_db/: accounts.rs  resources.rs
3_handles/: Cargo.toml  db_salt.json  mnemonic.json
3_handles/src/: app_settings.rs  database_handle.rs  lib.rs
3_handles/src/credentials/: delete.rs  get_credentials.rs  mod.rs  store_credentials.rs  tests.rs
3_handles/src/crypto/: encrypted_mnemonic.rs  mod.rs
3_handles/src/filesystem/: app_settings.rs
3_handles/src/image/: download.rs  image_extension.rs  mod.rs  resize.rs
3_handles/src/radix_dlt/: gateway_requests.rs  mod.rs  parse_responses.rs  updates.rs
3_handles/src/statics/: initialize_statics.rs
3_handles/src/store/: get.rs
3_handles/src/wallet/: create_account.rs  create_wallet.rs  login.rs  mod.rs
5_wallet/: Cargo.toml
5_wallet/src/: app_state.rs  error.rs  lib.rs  settings.rs  wallet.rs  wallet_keys_and_Salt.rs
5_wallet/src/wallet/: initial.rs  locked.rs  resource_data.rs  unlocked.rs  wallet_data.rs  wallet_setup.rs
backend/: Cargo.toml
backend/src/: backend.rs  handle.rs  lib.rs
crates/ravault/: Cargo.toml
crates/ravault/src/: main.rs
crates/store/: Cargo.toml
crates/store/src/: db.rs  statements.rs
crates/types/: Cargo.toml
crates/types/src/: account.rs  encryption_error.rs  entity_account.rs  icon.rs  key.rs  network.rs  non_fungibles.rs  password.rs  salt.rs  seedphrase.rs  update.rs
handles/: Cargo.toml
handles/src/: copy_to_clipboard.rs  lib.rs  store_credentials.rs
handles/src/credentials/: mod.rs
handles/src/crypto/: encrypted_mnemonic.rs
handles/src/filesystem/: app_path.rs  app_settings.rs  image_extension.rs  mod.rs  resize_image.rs  save_image.rs
handles/src/image/: resize.rs
handles/src/network/: download.rs
handles/src/radix_dlt/: gateway_requests.rs  mod.rs  parse_responses.rs  updates.rs  urls.rs
handles/src/statics/: initialize_statics.rs  mod.rs
handles/src/store/: write.rs
handles/src/wallet/: create_account.rs  create_wallet.rs  mod.rs
iced_ui/: Cargo.toml
iced_ui/src/: app.rs  common.rs  common_elements.rs  external_task_response.rs  external_tasks.rs  icons.rs  lib.rs  message.rs  reusable_elements.rs  subscription.rs  task_response.rs  tasks.rs  theme.rs  update.rs  view.rs
iced_ui/src/components/: enter_seedphrase.rs  mod.rs  notification.rs  password_input.rs  text_field.rs
iced_ui/src/error/: errorscreen.rs  mod.rs
iced_ui/src/initial/: common.rs  mod.rs  new_wallet.rs  new_wallet_old.rs  restore.rs  restore_from_backup.rs  restore_from_seed.rs  restore_from_seeds.rs  restore_wallet.rs  setup.rs
iced_ui/src/locked/: loginscreen.rs  mod.rs
iced_ui/src/message/: app_view_message.rs  backend_message.rs  common_message.rs  login_message.rs  setup_message.rs  update_message.rs
iced_ui/src/styles/: accounts.rs  button.rs  center_panel.rs  colors.rs  container.rs  menu.rs  mod.rs  pick_list.rs  rule.rs  scrollable.rs  text.rs  text_editor.rs  text_input.rs  toggler.rs
iced_ui/src/theme/: button.rs
iced_ui/src/traits/: map_message.rs  mod.rs
iced_ui/src/unlocked/: app_view.rs  mod.rs
iced_ui/src/view/: app_view.rs  loginscreen.rs  setup.rs
iced_ui/styles/: Cargo.toml
iced_ui/styles/button/: Cargo.toml
iced_ui/styles/container/: Cargo.toml
iced_ui/styles/dynstyles/: Cargo.toml
iced_ui/styles/pick_list/: Cargo.toml
iced_ui/styles/rule/: Cargo.toml
iced_ui/styles/scrollable/: Cargo.toml
iced_ui/styles/src/: button.rs  container.rs  lib.rs  pick_list.rs  rule.rs  scrollable.rs  text.rs  (+1 more)
iced_ui/theme/: Cargo.toml
iced_ui/widgets/: Cargo.toml
mercurium/: Cargo.toml
mercurium/.cargo/: config.toml
mercurium/src/: hot_lib.rs  main.rs  run_with_iced.rs
ravault/: Cargo.toml
ravault/src/: hot_lib.rs  main.rs
types/: Cargo.toml
types/src/: account.rs  account_update.rs  action.rs  address.rs  app_error.rs  app_path.rs  app_settings.rs  assets.rs  decimal.rs  entity_account.rs  fungibles.rs  lib.rs  metadata.rs  network.rs  non_fungibles.rs  resource.rs  seedphrase.rs  theme.rs  transaction.rs  unwrap_unreachable.rs  update.rs
ui/: Cargo.toml
ui/src/: app.rs  lib.rs  message.rs  subscription.rs
(+251 files in other folders)
