cargo-features = ["profile-rustflags"]


[workspace]
members = [
    "0_deps",
    "1_types",
    "2_store",
    "3_handles",
    "4_font_and_icons",
    "5_wallet",
    "iced_ui",
    "iced_ui/styles",
    "mercurium",
]
workspace.resolver = "3"
package.edition = "2024"


[profile.release]
panic = "unwind"
strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1


[profile.reload]
inherits = "dev"
rustflags = ["-C", "prefer-dynamic=true"]
opt-level = 0
lto = false
codegen-units = 1
debug-assertions = true
debug = 1
features = ["reload"]

# [profile.reload.package.iced_ui]
# rustflags = ["--crate-type cdylib"]

[profile.reload.package."*"]
opt-level = 3
rustflags = ["-C", "prefer-dynamic=true"]
codegen-units = 1


[workspace.dependencies]
deps = { path = "0_deps" }

serde = { version = "*", features = ["derive"] }
zeroize = { version = "*", features = ["zeroize_derive"] }
hot-lib-reloader = { version = "0.7.0" }
thiserror = "*"

#used from the deps crate
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", default-features = false, features = [
    "wgpu",
    "tokio",
    "image",
    "qr_code",
    "advanced",
    # "debug",
] }
hot_ice = { git = "https://github.com/aleanon/hot_ice.git", branch = "main" }
scrypto = { version = "1.3.0" }
tokio = { version = "*", features = ["full"] }
serde_json = { version = "*" }
async-sqlite = { version = "0.5.0", features = [
    "bundled-sqlcipher-vendored-openssl",
] }
reqwest = { version = "*", features = ["blocking", "json"] }
openssl-sys = { version = "*", features = ["vendored"] }
flate2 = "*"
bytes = "*"
image = "*"
fast_image_resize = { version = "5.1.3", features = ["image"] }
tiny-bip39 = "*"
slip10_ed25519 = "*"
ed25519-dalek-fiat = "*"
rand = "*"
ring = "*"
debug_print = "*"
regex = { version = "*" }
once_cell = "*"
lazy_static = { version = "*" }
const_format = "*"
radix-gateway-sdk = { git = "https://github.com/aleanon/radix-gateway-sdk-fork.git" }
asynciter = "*"
futures = "*"
bincode = "*"
no-mangle-if-debug = "0.1.0"
simple_logger = "*"

# Windows specific imports
winapi = { version = "*", features = ["winuser"] }
windows = { version = "*", features = [
    "Win32_System",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Security_Credentials",
] }
