cargo-features = ["profile-rustflags"]

[features]
reload = ["dep:hot-lib-reloader", "dep:hot_ice"]

[package]
name = "deps"
version = "0.1.0"
edition.workspace = true


[lib]
crate-type = ["rlib", "cdylib"]

[profile.dev]
opt-level = 3
features = ["iced/debug"]

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1


[profile.reload]
inherits = "dev"
opt-level = 1
lto = false
codegen-units = 1
debug-assertions = true
debug = 0

[profile.reload.package."*"]
opt-level = 3
codegen-units = 1

[dependencies]
iced = { workspace = true, features = [
    "wgpu",
    "tokio",
    "image",
    "qr_code",
    "advanced",
] }

scrypto = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-sqlite = { workspace = true, features = [
    "bundled-sqlcipher-vendored-openssl",
] }
reqwest = { workspace = true, features = ["blocking", "json"] }
openssl-sys = { workspace = true, features = ["vendored"] }
flate2 = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
image = { workspace = true }
fast_image_resize = { workspace = true }
tiny-bip39 = { workspace = true }
slip10_ed25519 = { workspace = true }
ed25519-dalek-fiat = { workspace = true }
ring = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
debug_print = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
const_format = { workspace = true }
radix-gateway-sdk = { workspace = true }
asynciter = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
no-mangle-if-debug = { workspace = true }
simple_logger = { workspace = true }
# secrecy = { workspace = true }

# Optional
hot-lib-reloader = { workspace = true, optional = true }
hot_ice = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["winuser"] }
windows = { workspace = true, features = [
    "Win32_System",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Security_Credentials",
] }
