[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
scrypto.workspace = true
serde.workspace = true
serde_json.workspace = true
ring.workspace = true
thiserror.workspace = true
bytes.workspace = true
image.workspace = true
iced.workspace = true
tiny-bip39 = { workspace = true }
ed25519-dalek-fiat = { workspace = true }
slip10_ed25519 = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
debug_print = { workspace = true }
rusqlite.workspace = true
reqwest = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
const_format = { workspace = true }
radix-gateway-sdk = { workspace = true }
asynciter = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
