[package]
name = "store"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../1_types" }
async-sqlite = { workspace = true, features = [
    "bundled-sqlcipher-vendored-openssl",
] }
openssl-sys = { workspace = true, features = ["vendored"] }
debug_print = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
asynciter = { workspace = true }
const_format = { workspace = true }

[dev-dependencies]
tiny-bip39 = { workspace = true }
tokio = { workspace = true }
