
[package]
name = "store"
version = "0.1.0"
edition.workspace = true


[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
deps = { path = "../0_deps" }
types = { path = "../1_types" }
zeroize = { workspace = true }
thiserror = { workspace = true }


# async-sqlite = { workspace = true, features = [
#     "bundled-sqlcipher-vendored-openssl",
# ] }
# openssl-sys = { workspace = true, features = ["vendored"] }
# debug_print = { workspace = true }
# once_cell = { workspace = true }
# asynciter = { workspace = true }
# const_format = { workspace = true }

# [dev-dependencies]
# tiny-bip39 = { workspace = true }
# tokio = { workspace = true }
