cargo-features = ["profile-rustflags"]

[package]
name = "handles"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[profile.dev]
rustflags = ["-C", "prefer-dynamic"]


[dependencies]
deps = { path = "../0_deps" }
types = { path = "../1_types" }
store = { path = "../2_store" }
thiserror.workspace = true


# ed25519-dalek-fiat.workspace = true
# tiny-bip39.workspace = true
# scrypto.workspace = true
# zeroize.workspace = true
# slip10_ed25519.workspace = true
# debug_print.workspace = true
# fast_image_resize.workspace = true
# image.workspace = true
# serde.workspace = true
# ring.workspace = true
# serde_json.workspace = true
# reqwest = { workspace = true }
# bytes = { workspace = true }
# tokio = { workspace = true }
# radix-gateway-sdk = { workspace = true }
# once_cell = { workspace = true }
# # iced = { workspace = true }
# futures = { workspace = true }
# async-sqlite = { workspace = true }


# [target.'cfg(windows)'.dependencies]
# winapi = { workspace = true, features = ["winuser"] }
# windows = { workspace = true, features = [
#     "Win32_System",
#     "Win32_Foundation",
#     "Win32_Security",
#     "Win32_Security_Cryptography",
#     "Win32_Security_Credentials",
# ] }


# [dev-dependencies]
# rand = { workspace = true }
