[package]
name = "wallet"
version = "0.1.0"
edition.workspace = true

[dependencies]
types = { path = "../1_types" }
store = { path = "../2_store" }
handles = { path = "../3_handles" }

thiserror = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
debug_print = { workspace = true }
