
[package]
name = "wallet"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
deps = { path = "../0_deps" }
types = { path = "../1_types" }
store = { path = "../2_store" }
handles = { path = "../3_handles" }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# bytes = { workspace = true }
# tokio = { workspace = true }
# debug_print = { workspace = true }
