[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store ={ path = "../store"}
handles ={ path = "../handles"}
types ={ path = "../types"}
reqwest.workspace = true
thiserror.workspace = true
iced.workspace = true
tokio.workspace = true
bytes.workspace = true
debug_print.workspace = true
image.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
flate2.workspace = true


[dev-dependencies]
scrypto.workspace = true
tokio-rusqlite.workspace = true
# debug_print.workspace = true