cargo-features = ["profile-rustflags"]

[package]
name = "iced_ui"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
noupdate = []
reload = [
    # "dep:hot-lib-reloader"
]

[profile.reload]
inherits = "dev"
rustflags = ["-C", "prefer-dynamic", "-Zmacro-backtrace"]
opt-level = 0
lto = false
codegen-units = 1
debug-assertions = true
debug = 1
features = ["reload"]

[profile.reload.package."*"]
opt-level = 3
codegen-units = 1

[dependencies]
types = { path = "../1_types" }
store = { path = "../2_store" }
handles = { path = "../3_handles" }
font_and_icons = { path = "../4_font_and_icons" }
wallet = { path = "../5_wallet" }
styles = { path = "styles" }
widgets = { path = "widgets" }
iced = { workspace = true }
# iced_aw = { workspace = true, features = ["icons"] }
zeroize = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
scrypto = { workspace = true }
lazy_static = { workspace = true }
bytes = { workspace = true }
inline_tweak = { workspace = true, features = ["derive"] }

debug_print.workspace = true
hot-lib-reloader = { workspace = true }
