cargo-features = ["profile-rustflags"]

[package]
name = "mercurium"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
reload = []


[dependencies]
iced_ui = { path = "../iced_ui" }
deps = { path = "../0_deps" }
types = { path = "../1_types" }
font_and_icons = { path = "../4_font_and_icons" }
# hot-lib-reloader = { version = "0.7.0" }
# styles = { path = "../iced_ui/styles" }
# tokio = { workspace = true }
# libloading = { workspace = true }
