[package]
name = "ravault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
reload = []


[dependencies]
iced_ui ={ path = "../iced_ui"}

[dev-dependencies]
hot-lib-reloader = {workspace = true}
