[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
scrypto.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
ring.workspace = true
thiserror.workspace = true
bytes.workspace = true
image.workspace = true
iced.workspace = true

zeroize = {workspace = true, features = ["zeroize_derive"]}

[dev-dependencies]
rand = "0.8.5"