[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
#crate-type = ["dylib"]

[features]
default = []
reload = ["dep:hot-lib-reloader"]

[dependencies]
types ={ path = "../types"}
store ={ path = "../store"}
backend ={ path = "../backend"}
handles ={ path = "../handles"}
iced ={ workspace = true }
zeroize = {workspace = true}
thiserror ={ workspace = true }
tiny-bip39 = {workspace = true}

debug_print.workspace = true
hot-lib-reloader = {workspace = true, optional = true}

[dev-dependencies]
