[package]
name = "ravault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
reload = ["dep:hot-lib-reloader"]


[dependencies]
ui ={ path = "../ui"}
iced = { workspace = true }
anyhow ={ workspace = true }

hot-lib-reloader = {workspace = true, optional = true}

[dev-dependencies]
