cargo-features = ["profile-rustflags"]

[package]
name = "widgets"
version = "0.1.0"
edition.workspace = true

# [profile.reload]
# inherits = "dev"
# opt-level = 0
# lto = false
# codegen-units = 1
# debug-assertions = true
# debug = 1

# [profile.reload.package."*"]
# opt-level = 3
# codegen-units = 1


[dependencies]
deps = { path = "../../0_deps" }

# [lib]
# crate-type = ["rlib", "dylib"]
