cargo-features = ["profile-rustflags"]

[features]
reload = []

[package]
name = "dynstyles"
version = "0.1.0"
edition = "2021"

[profile.reload]
inherits = "dev"
opt-level = 0
lto = false
codegen-units = 1
debug-assertions = true
debug = 1

[profile.reload.package."*"]
opt-level = 3
codegen-units = 1

[dependencies]
iced = { workspace = true }
no-mangle-if-debug = "0.1.0"


[lib]
crate-type = ["rlib", "dylib"]
