cargo-features = ["profile-rustflags"]


[lib]
crate-type = ["rlib", "cdylib"]

[features]
reload = []

[package]
name = "dynrule"
version = "0.1.0"
edition = "2021"

# [profile.reload]
# inherits = "dev"
# opt-level = 1
# lto = false
# codegen-units = 1
# debug-assertions = true
# debug = 1

# [profile.reload.package."*"]
# opt-level = 3
# codegen-units = 1

[dependencies]
deps = { path = "../../../0_deps" }
# iced = { workspace = true }
