cargo-features = ["profile-rustflags"]

[features]
reload = []

[package]
name = "dynscrollable"
version = "0.1.0"
edition = "2021"

[profile.reload]
inherits = "dev"
opt-level = 1
lto = false
codegen-units = 1
debug-assertions = true
debug = 1
rustflags = ["-C", "prefer-dynamic"]

[profile.reload.package."*"]
opt-level = 3
codegen-units = 1

[dependencies]
deps = { path = "../../../0_deps" }

[lib]
crate-type = ["rlib", "cdylib"]
